--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -4017,7 +4017,7 @@
 
 				treeViewHandlerStr_ += "<table cellpadding='0' cellspacing='0' border='0' style='float:left;'><tr>"; //open pre/comment table row 
 				if (treeNavContextMenuItemHandlers.length) //fix width if this is a config node so comments show up aligned
-					treeViewHandlerStr_ += "<td><div style='width:470px'>"; //open pre-comment td and div
+					treeViewHandlerStr_ += "<td><div style='min-width:470px'>"; //open pre-comment td and div
 				else
 					treeViewHandlerStr_ += "<td><div>"; //open pre-comment td and div
 
