Added feature to edit the name of UID link targets through the Tree GUI

--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -7610,7 +7610,7 @@
 							"id='editTree-groupIdFreeform-editIcon' " +
 							"onmouseup='event.stopPropagation();'" +
 							"onclick='handleEditTreeGroupIDEditFreeformToggle();event.stopPropagation();' " +
-							"title='Toggle free-form GroupID editing' " +
+							"title='Toggle free-form " + linkIdType + " editing' " +
 							"></div>";
 						str += "</td></tr></table>"; //end select and editIcon table
 
@@ -10350,11 +10350,10 @@
 								newValue += sel.options[sel.selectedIndex].value;
 						}
 
-						if (treeEditingNodeType_ == "link-GroupID")
-						{
-							//make csv newValue := linkTable,linkGroupID,linkTableVersion,groupMemberUID,...
-
-							//add link target table version and chosen group members						
+						//For links, add link target table version 
+						if (treeEditingNodeType_.indexOf("link-") == 0) //UID or GroupID
+						{				
+							//make csv newValue := linkTable,linkUID,linkTableVersion								
 							var linkTargetTable = _editingCellEl.getElementsByTagName("select")[0].value;
 							var tableVersion = -1;
 							var tableIndex = -1;
@@ -10372,7 +10371,13 @@
 							//								return;					
 							//							}
 							newValue += "," + tableVersion;
+						} //end add link target table version 
 
+						//For GroupID links, add chosen group members to CSV	
+						if (treeEditingNodeType_ == "link-GroupID")
+						{
+							//make csv newValue := linkTable,linkGroupID,linkTableVersion,groupMemberUID,...
+			
 							//save new group members 
 							// if different from treeEditingInitGroupMembers_
 
@@ -10388,7 +10393,7 @@
 								newValue += "," +
 									MultiSelectBox.getSelectionElementByIndex(el, s).textContent;
 							}
-						}
+						} //end add chosen group members to CSV
 					}
 					else if (treeEditingNodeType_ == "table-newGroupRow") 
 					{
