Check in local state mrigatti/hwdev

--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -4559,7 +4559,8 @@
 				treeEditingNodeParentIdString_ =
 					document.getElementById("treeNode-ParentId-" + idString).textContent;
 
-				if (type == "uid") {
+				if (type == "uid") 
+				{
 					//edit UID mode 
 					if (depth == 1)
 						treeEditingTargetTable_ = splitArr[splitArr.length - 2]; //table should be before last slash in path
