--- a/WebGUI/html/widgets/table.html
+++ b/WebGUI/html/widgets/table.html
@@ -17,7 +17,7 @@
 
 		<link href="libraries/tabulator-master/dist/css/tabulator.min.css" rel="stylesheet">
 		<script type="text/javascript" src="libraries/tabulator-master/dist/js/tabulator.min.js"></script>
-
+		<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/luxon@2.0.2/build/global/luxon.min.js"></script>
 		<script>
 			//functions:
 			//init()
