--- a/WebGUI/html/FEMacroTest.html
+++ b/WebGUI/html/FEMacroTest.html
@@ -159,6 +159,8 @@
 
 		var inputValueHistory_ = {}; //keep last input values, and recall for quick launches
 		var multiSelectToggleSetting_ = {}; //true for multiselect display
+
+		var focusedMacroCell = [-1,-1]; //when enter is pressed which macro to run
 		
 		/////////////////////////////////////////////////////////////////////////////////////////
 		/////////////////////////////////////////////////////////////////////////////////////////
@@ -722,6 +724,8 @@
 							{
 								"id": "macroModule-row-" + r + "-col-" + c,
 								"class":"macroModule",
+								"onclick":"handleClickInMacroArea(" +
+											r + "," + c + ");"
 							},
 						"" /*innerHTML*/,true /*doCloseTag*/);
 				}
@@ -1381,6 +1385,15 @@
 						
 		} //end handleSelectedMacroType
 
+
+		//=====================================================================================
+		//handleSelectedMacroName ~~		
+		function handleClickInMacroArea(r,c)
+		{
+			Debug.log("handleClickInMacroArea(" + r + "," + c + ")");
+			focusedMacroCell = [r,c];
+		} //end handleClickInMacroArea()
+
 		//=====================================================================================
 		//handleSelectedMacroName ~~		
 		function handleSelectedMacroName(r,c)
@@ -1571,13 +1584,22 @@
 			el.focus();
 			el.setSelectionRange(caretPos, endPos);
 		} //end setCaretPosition()
+
+		//=====================================================================================				
+		//handleKeyInput ~~
+		function handleKeyInput(e) 
+		{
+			if(e.key == "Enter")
+				Debug.log("Enter on ",focusedMacroCell[0],focusedMacroCell[1]);
+		} //end handleKeyInput()
+
 		
 		</script>
 		
 </head>
 	
 
-<body onload='//init() called by DesktopContent.js'>	
+<body onload='//init() called by DesktopContent.js' onkeydown='handleKeyInput(event);'>	
 		
 	<!-- <center> -->
 	
