new dqm-dcs pages: DaqRoomHealth and Plot

--- a/WebGUI/html/DqmGUI.html
+++ b/WebGUI/html/DqmGUI.html
@@ -87,7 +87,7 @@
 						<i class="fa fa-caret-down"></i>
 					</button>
 					<div class="dropdown-container">
-						<a href="#">Link 1</a>
+						<button class="open-page-btn" onmousedown="openPage('/WebPath/html/DqmPages/DaqRoomHealth.html')"><i class="fa fa-fw fa-thermometer"></i> Daq room health</button>
 						<a href="#">Link 2</a>
 						<a href="#">Link 3</a>
 					</div>
